--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,39 +1,33 @@
-name: CI for SEProject
+name: Java CI
 
 on:
   push:
     branches:
-      - main            # main 브랜치로의 push를 감지하여 CI 실행
-      - 'feature/**'    # feature/로 시작하는 모든 브랜치의 push를 감지하여 CI 실행
+      - main
   pull_request:
     branches:
-      - main            # main 브랜치로의 pull request를 감지하여 CI 실행
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out the code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK
+      - name: Setup JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '23' 
+          distribution: 'temurin' # OpenJDK 배포판
+          java-version: '17' # 로컬 환경과 동일한 Java 버전 사용
 
-      - name: Cache Gradle dependencies
+      - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Build with Gradle
-        run: ./gradlew build --no-daemon
+          key: gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: gradle-
 
       - name: Run tests
         run: ./gradlew test --no-daemon
-
